# simple-tcp-client-example

./: Cargo.toml
src/: main.rs
src/my_client/: mod.rs  my_callback.rs  my_serializer.rs
