[package]
name = "tcp-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-tcp-sockets = {branch= "0.1.0", git= "https://github.com/MyJetTools/my-tcp-sockets.git"}
tokio = { version = "1", features = ["full"] }
async-trait = "*"